--- a/app.json
+++ b/app.json
@@ -20,10 +20,12 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.rajeevsk.ContactsApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
